--- a/Bio.html
+++ b/Bio.html
@@ -26,9 +26,10 @@ img {
             <tr>
                 <td><a href="https://idoremembermyusername.github.io/Index.html">Home</a></td>
                 <td><a href="https://idoremembermyusername.github.io/Bio.html">Bio</a></td>
-                <td><a href="https://idoremembermyusername.github.io/Portfolio.html>Portfolio</a></td>
+                <td><a href="https://idoremembermyusername.github.io/Portfolio.html">Portfolio</a></td>
             </tr>
         </table>
+        <br>
         <img src="the-more-you-know.png"></img>
         <hr>
 
